Issue #3422 - Improve color contrast for disabled buttons
Also, show the not-allowed cursor to make it more obvious.

--- a/webcompat/static/css/src/issue-wizard.css
+++ b/webcompat/static/css/src/issue-wizard.css
@@ -514,7 +514,9 @@
 }
 
 .button:disabled {
-  opacity: .5;
+  color: var(--button-disabled-color);
+  cursor: not-allowed;
+  opacity: .6;
 }
 
 .spaced-link {
